# music-files-organizer

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs
src/: cli.rs  discogs_client.rs  main.rs  tag.rs
src/command/: add_covers.rs  add_missing_covers.rs  fsync.rs  generate_completions.rs  import.rs  mod.rs
src/core/: changes.rs  mod.rs
src/discogs/: client.rs  create_tag.rs  into_tag.rs  matcher.rs  mod.rs  model.rs
src/discogs/model/: mod.rs  refined.rs  serialized.rs
src/music_file/: mod.rs
src/tag/: flac.rs  frame.rs  id3.rs  m4a.rs  mod.rs
src/util/: audio_file_duration.rs  console.rs  console_styleable.rs  const.rs  discogs.rs  fsync.rs  mod.rs  path_extensions.rs  string_extensions.rs  transcode.rs
