[package]
name = "music-files-organizer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "*", features = ["backtrace"] }
once_cell = "*"
clap = { version = "*", features = ["derive"] }
clap_complete = "*"
id3 = "*"
mp4ameta = "*"
metaflac = "*"
ffmpeg-next = { version = "*", features = ["build-lib-fdk-aac"] }
reqwest = { version = "*", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
common-path = "*"
console = "*"
indicatif = "*"
dialoguer = "*"
regex = "*"
sanitize-filename = "*"
dirs = "*"
progress-streams = "*"
tempfile = "*"
itertools = "*"
walkdir = "*"
unidecode = "*"
strsim = "*"
fuzzy-matcher = "*"
lofty = "*"
